# SRWM

./: .gitignore  README.md  base_config.yaml  pyproject.toml  requirements.txt  改进点.md
rl/: .env.example  README.md  __init__.py  requirements-rl.txt
rl/configs/: __init__.py  sft_collection.yaml
rl/data/: __init__.py  action_parser.py  alfworld_task_pool.py  collect_sft_dataset.py  dify_client.py  format_to_sft_jsonl.py  stats_report.py  trajectory_runner.py
rl/data/tests/: __init__.py  fakes.py  test_action_parser.py  test_dify_client.py  test_format_converter.py  test_trajectory_runner.py
rl/scripts/: run_collect_sft.sh  setup_env.sh
src/paradigm_experiments/: __init__.py
src/paradigm_experiments/agents/: __init__.py  action_selection.py  parsing.py  reflection.py  world_model.py
src/paradigm_experiments/evaluation/: __init__.py  report.py  state.py
src/paradigm_experiments/observability/: __init__.py  event_log.py  langsmith.py  local_trace.py  recorder.py  trace_schema.py
src/paradigm_experiments/runtime/: __init__.py  alfworld_env.py  llm.py  runner_utils.py  settings.py
tests/unit/: test_action_selection.py  test_alfworld_env.py  test_evaluation_state.py  test_langsmith_helper.py  test_local_trace.py  test_observability_event_log.py  test_offline_report.py  test_parsing.py  test_reflection.py  test_runner_utils.py  test_runtime_llm.py  test_settings.py  test_trace_schema.py  test_world_model.py
消融实验/: agent_ablation_unified.py  run_ablation.py  命令文档.md
