[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfworld-huawei-agentops"
version = "0.1.0"
description = "AgentOps-oriented ALFWorld agent experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alfworld",
    "langsmith",
    "openai",
    "python-dotenv",
    "pyyaml",
    "textworld",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
